# xauusd-ai

./: .cov.truth_fullyear  .gitignore  ACTIVE_PY_FILES.truth_fullyear.json  CLAUDE.md  DEVELOPMENT_NOTES.md  FARM_V2B_EXIT_A_ANALYSIS.md  GX1_PATHS.md  KEEP_PY_FILES.truth_fullyear.txt  Makefile  NOISE_PY_FILES.truth_fullyear.txt  PNL_CLEANUP_REPORT.md  README.md  REPLAY_1MONTH_COMMAND.md  ROOT_CAUSE_ANALYSIS.md  SHELL_ENV_REPORT.md  backup-exclude  direct_find_prebuilt.py  env.example  execute_calibrator_training.py  execute_find_prebuilt.py  expected_ctx_cont_cols.txt  find_prebuilt_files.py  profile_replay.py  pyproject.toml  pytest.ini  run_all_calibrator_steps.py  run_calibrator_training.py  run_find_prebuilt.py  run_list_prebuilt.py  run_training_direct.py  setup.py  test_calibrator_import.py  test_simple.py  test_xgb_minimal.py  tore --staged .
INPUT_INVENTORY_NOW_20260215_150308/: FEATURE_REFINED_REVIEW.json  FEATURE_REFINED_REVIEW.md  INPUT_INVENTORY_NOW.json  INPUT_INVENTORY_NOW.md
INPUT_INVENTORY_NOW_20260215_150320/: FEATURE_REFINED_REVIEW.md  INPUT_INVENTORY_NOW.json  INPUT_INVENTORY_NOW.md
INPUT_INVENTORY_NOW_20260215_150429/: FEATURE_REFINED_REVIEW.md  INPUT_INVENTORY_NOW.json  INPUT_INVENTORY_NOW.md
INPUT_INVENTORY_NOW_20260215_150430/: FEATURE_REFINED_REVIEW.md  INPUT_INVENTORY_NOW.json  INPUT_INVENTORY_NOW.md
INPUT_INVENTORY_NOW_20260215_150554/: FEATURE_REFINED_REVIEW.json  FEATURE_REFINED_REVIEW.md  INPUT_INVENTORY_NOW.json  INPUT_INVENTORY_NOW.md
INPUT_INVENTORY_NOW_20260215_150555/: FEATURE_REFINED_REVIEW.json  FEATURE_REFINED_REVIEW.md  (+2 more)
(+27913 files in other folders)
